k8s/service-eks.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-app-service

  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"

spec:
  type: LoadBalancer

  selector:
    app: devops-app

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
